[gd_scene load_steps=10 format=2]

[ext_resource path="res://common/Shake.tscn" type="PackedScene" id=1]
[ext_resource path="res://plants/scripts/plant.gd" type="Script" id=2]
[ext_resource path="res://plants/textures/shadow.png" type="Texture" id=3]
[ext_resource path="res://plants/ui/scene/plant_tooltip.tscn" type="PackedScene" id=4]
[ext_resource path="res://plants/textures/carrot/carrot-full-growth.png" type="Texture" id=5]
[ext_resource path="res://ui/textures/icons/information_icon.png" type="Texture" id=6]

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GrownPlant" type="Node2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.337255 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -33 )
texture = ExtResource( 5 )

[node name="Shake" parent="Sprite" instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( -26, -43, -11, 37, 17, 38, 24, -41 )

[node name="HarvestTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 4 )

[node name="PlantTooltipHolder" type="Node2D" parent="."]
z_index = 5

[node name="PlantTooltip" parent="PlantTooltipHolder" instance=ExtResource( 4 )]
visible = false
margin_left = 16.0
margin_top = -55.0
margin_right = 16.0
margin_bottom = -55.0

[node name="TooltipCheckArea" type="Panel" parent="PlantTooltipHolder"]
margin_left = 10.0
margin_top = -4.0
margin_right = 20.0
margin_bottom = 6.0
mouse_filter = 1
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
